# nongd

./: .gitignore  CMakeLists.txt  README.md  about.md  changelog.md  mod.json
.github/workflows/: build.yml
src/: NongManager.cpp  NongManager.hpp  filesystem.hpp  main.cpp  manifest.cpp  manifest.hpp  nong.cpp  nong.hpp  random_string.cpp
src/UI/: ListCell.cpp  ListCell.hpp  NongAddPopup.cpp  NongAddPopup.hpp  NongCell.cpp  NongCell.hpp  NongLayer.cpp  NongLayer.hpp  NongPopup.cpp  NongPopup.hpp
src/hooks/: custom_song_widget.cpp  music_download_manager.cpp
src/managers/: NongManager.cpp  NongManager.hpp  nong_manager.cpp  nong_manager.hpp
src/types/: FetchStatus.hpp  SongInfo.hpp  sfh_item.hpp  song_info.hpp
src/ui/: list_cell.cpp  nong_add_popup.cpp  nong_add_popup.hpp  nong_cell.cpp  nong_cell.hpp  nong_dropdown_layer.cpp  nong_dropdown_layer.hpp  nong_popup.cpp  nong_popup.hpp
temp/: NongLayer.cpp  NongLayer.hpp
